tests/spec/type_errors/impl_generic_arity.fable
// SPEC §5.1 (v0.2): E0332 — an impl must bind exactly as many type
// parameters as the type declares.
//? error: E0332
//? error: `Pair` has 2 type parameters, but this impl binds 1
struct Pair[A, B] {
    first: A,
    second: B,
}

impl Pair[T] {
    fn first_of(self) -> T {
        self.first
    }
}
